# qszsj

admin-ui/: index.html  package.json
admin-ui/src/: main.js
admin-ui/src/assets/css/: style.css
admin-ui/src/router/: index.js
admin-ui/src/utils/: http.js
admin-ui/src/views/account/: Account.vue
admin-ui/src/views/app/: App.vue
admin-ui/src/views/history/: History.vue
admin-ui/src/views/knowledge/: Knowledge.vue
admin-ui/src/views/login/: Login.vue
admin-ui/src/views/main/: LeftMenu.vue  Main.vue
admin-ui/src/views/user/: User.vue
client/: .env  main.py  pyproject.toml  tasks.py
client-ui/: index.html  package.json  pnpm-lock.yaml
client-ui/src/: App.vue  main.js
client-ui/src/router/: index.js
client-ui/src/stores/: search.js
client-ui/src/utils/: asr.js  http.js
client-ui/src/views/chat/: Chat.vue
client-ui/src/views/home/: Home.vue
client-ui/src/views/login/: Login.vue
server/: .gitignore  README.md  config.py  main.py  models.py  pyproject.toml  tasks.py
server/assets/: zkgz.xlsx
server/controllers/: __init__.py  account.py  app.py  auth.py  client.py  history.py  home.py  knowledge.py  user.py
server/dtos/: common.py
server/service/: common.py
